<resources>
    <string name="app_name">Vayoc dzor</string>
    <string name="arm">Բացահայտի՛ր Վայոց ձորը</string>
    <string name="yeghegnadzor">Եղեգնաձոր</string>
    <string name="jermuk">Ջերմուկ</string>
    <string name="vayk">Վայք</string>
    <string name="vayoc_dzor">Վայոց ձոր</string>
    <string name="yegheg">Քաղաքապետ՝ Դավիթ Հարությունյան
                          Տարածքը՝ 27կմ քառակուսի
                          Բարձրությունը ծովի մակ․՝ 1194մ
                          Բնակչությունը՝ 7944մարդ (2011թ)
    </string>
    <string name="jrm">Քաղաքապետ՝ Վարդան Հովհաննիսյան
                          Տարածքը՝ 5.5կմ քառակուսի
                          Բարձրությունը ծովի մակ․՝ 2080մ
                          Բնակչությունը՝ 9372 մարդ (2011թ)
    </string>
    <string name="vyk">Քաղաքապետ՝ Թարո Ավետյան
                          Տարածքը՝ 3կմ քառակուսի
                          Բարձրությունը ծովի մակ․՝ 1250մ
                          Բնակչությունը՝  ‎5800 մարդ (2015)
    </string>
    <string name="vyc">Մարզպետ՝ Արարատ Գրիգորյան
                          Տարածքը՝ 2308կմ քառակուսի
                          Բնակավայրերի թիվը` 55
                          Քաղաքների թիվը՝ 3
                          Համայնքների թիվը՝8(6 խոշորացված)
                          Կազմավորման թիվը՝ապրիլի 12,1995
                          Բնակչությունը՝58,324(2013) մարդ
    </string>
    <string name="yeghegnadzor_1">   Վայոց Ձորի մարզի մարզկենտրոնը Եղեգնաձոր քաղաքն է։Տեղացիներից բացի,նախնիների մի մասը 1829-1830 թթ.-ին այստեղ են գաղթել Պարսկահայքի Խոյ և Սալմաստ գավառներից։
    </string>
    <string name="vayk_1">Վայք քաղաքը գտնվում է Երևանից մոտ 140 կմ, իսկ մարզկենտրոնից 16 կմ հեռավորության վրա:</string>
    <string name="jermuk_1">Ջերմուկ քաղաքը գտնվում է մարզկենտրոնից 50կմ հյուսիս-արևելք,մայրաքաղաք Երևանից 173 կմ հեռավորության վրա:</string>
    <string name="vayoc_dzor_1">Վայոց ձորի մարզը գտնվում է Հայաստանի Հանրապետության հարավարևելյան վերջույթում։ ՀՀ մարզերի շարքում տարածքի մեծությամբ գրավում է միջին տեղ, իսկ բնակչության թվով ամենափոքր մարզն է։ Մարզը զբաղեցնում է 2308քառ.կմ մակերես, հյուսիսից սահմանակից է Գեղարքունիքի մարզին, հյուսիսարևելքից` ԼՂՀ ին, հարավարևելքից` Սյունիքին, հարավից` Նախիջևանի Հանրապետությանը (Ադրբեջան), արևմուտքից` Արարատի մարզին։</string>
    <string name="yeghegnadzor_2">Պատմություն</string>
    <string name="yeghegnadzor_3">   Եղեգնաձորը հայոց լեռնաշխարհի հնագույն բնակավայրերից է։Այդ մասին են վկայում քաղաքի հյուսիս-արևելյան հատվածում պեղված դամբարաշերտի գտածոները,որոնք պատկանում են մթա I հազարամյակին։ Ըստ պատմական աղբյուրների Եղեգնաձորը միջնադարում անվանվել է Փոնձաթաղ, Սխտորալեզ, հետագայում նաև Եղեգիք, Եղեգյաց, Եղեգնաձոր, իսկ 19-րդ դարի սկզբներից Քեշիշքենդ։ Խորհրդային կարգեր հաստատվելուց հետո Քեշիշքենդը դառնում է շրջկենտրոն։

1935 թ-ին Քեշիշքենդը վերանվանվեց Միկոյան, Խորհրդային Միության քաղաքական գործիչ Անաստաս Միկոյանի պատվին։
        1958 թ-ի դեկտեմբերի 6-ի Հայաստանի գերագույն խորհրդի հրամանագրով Միկոյանի շրջանը և համանուն ավանը վերանվանվեց Եղեգնաձոր։ 1996 թ-ին Եղեգնաձորի և Վայքի շրջանները միավորվեցին և ձևավորեցին Վայոց ձորի մարզը, իսկ ավանին շնորհվեց քաղաքի կարգավիճակ։

Ըստ տեղեկությունների 9-րդ դարի առաջին քառորդում, երբ Սյունյաց իշխան Վասակի որդի Փիլիպեն իր նստավայրը փոխադրում է Վայոց Ձոր և հաստատվում Եղեգիս գյուղաքաղաքում,
        Եղեգնաձոր կամ Եղեգեաց Ձոր անունը տարածվում է ամբողջ գավառի վրա։ Իսկ Եղեգնաձորի անվանումը ըստ ժողովրդական ստուգաբանության մեկնաբանվում է այսպես,
        երբ 7-րդ դարում արաբները հարձակվում են Վայոց Ձորի վրա, գրավում են այն և մեծ ավերվածություններ կատարում,
        բնակչությունը արտագաղթում է և այն դառնում է գրեթե անմարդաբնակ և երբ այս տարածքները երկար ժամանակ չեն մշակվում,
        վեր են ածվում եղեգնուտների, որտեղից էլ առաջացել է եղեգների ձոր, ապա Եղեգնաձոր անվանումը։</string>
    <string name="vayk_3">Քաղաքը նախկինում կոչվել է Սոլյան։1921-29թ-ին մտնում էր Դարալագյազի գավառի մեջ։ 1930-ին Դարալագյազի գավառը վերացվում է և հետագայում դրա տարածքից կազմվում են Եղեգնաձորի և Ազիզբեկովի շրջաններ։ 1956 թ. հոկտեմբերի 18-ի ՀՍՍՀ Գերագույն խորհրդի հրամանագրով Սոյլանը վերանվանվել է Ազիզբեկովի անունով։ Նոր կազմավորված վարչական շրջանը, իր կենտրոնն ունենալով Ազիզբեկով (Փշոնք-Փաշալու) գյուղը, շրջկենտրոնի անունով էլ կոչվում է Ազիզբեկովի շրջան։ Հետագայում Վայոց Ձորի գեղատեսիլ արոտավայր Սոյլան գյուղատեղը ընտրվում է որպես Ազիզբեկովի վարչական կենտրոն և Հայկական ԽՍՀ Գերագույն Խորհրդի 1966 թվականի հոկտեմբերի 12 հրամանագրով դառնում է քաղաքատիպ ավան Ազիզբեկով, իսկ նախկին Փշոնք, Փաշալու-Ազիզբեկով Գյուղը Գերագույն Խորհրդի 1957 թվականի հուլիսի 8 հրամանագրով դառնում է Զառիթափ։ Իր հերթին Ազիզբեկով քաղաքատիպ ավանը Հայկական ԽՍՀ Գերագույն Խորհրդի 1990 թվականի հրամանագրով ստանում է իր պատմական տարածաշրջանի նվիրական անունը և կոչվում Վայք, իսկ շրջանը Վայքի շրջան։ </string>
    <string name="jermuk_3">Բնակավայրը հիշատակվում է սկսած XIII դարից; Սակայն քաղաքի տարածքում գտնվող հին կիկլոպյան ամրոցի և VIII դարի եկեղեցու ավերակներն ու մնացորդները խոսում են այն մասին, որ հանքային ջրերի ակունքների մոտ գտնվող Ջերմուկ բնակավայրը գոյություն է ունեցել շատ վաղուց։

Ջերմուկի տեղում նախկինում եղել է հայկական Ջերմուկ գյուղը: Հետագայում այն օտարների կողմից ավերվել է և նրա փոխարեն նոր գյուղ են կառուցել, որը թարգմանաբար կոչել են Իստիսու: Ջերմուկ է վերանվանվել 1924 թվականին։

Քաղաքին է պատկանում նաև 3 կմ հարավ-արևմուտքում գտնվող Կեչուտ գյուղը։ 2016 թվականին «Վարչատարածքային բաժանման մասին» Հայաստանի Հանրապետության օրենքով Ջերմուկ քաղաքային համայնքին են միավորվել նաև Գնդեվազ, Հերհեր  և Կարմրաշեն գյուղերը:

Ջերմուկի կազդուրիչ հանքային ջրերը դեռ շատ հնուց օգտագործվել են ինչպես հասարակ ժողովրդի, այնպես էլ Սյունաց Իշխանների կողմից՝ ամենատարբեր հիվանդությունների բուժման նպատակով։ Այդ մասին են վկայում միջնադարում կառուցված լողավազանի մնացորդները, որոնք վերակառուցվել և վերականգնվել են 1860-ական թվականներին ցարական պրիստավ Գևորգ Խանագյանի կողմից, և այժմ էլ ժողովրդի կողմից լողավազանը կոչվում է «Պրիստավի գյոլ»: Չնայած պատմական հարուստ անցյալին, այսօրվա նոր քաղաքի հիմքը դրվել է միայն 1940 թվականին՝ առաջին առողջարանի կառուցման ավարտով։

Ջերմուկի առաջին  գլխավոր հատակագիծը կազմվել է 1945 թվականին  ճարտարապետ Պ.Մսրյանի կողմից,1952 թվականին ՝ երկրորդը,որը կազմել է ճարտարապետ Փ.Մանուկյանի կողմից, իսկ վերամշակվել է 1960-1962 թվականներին, որով և սկսվել է Ջերմուկի կառուցապատման նոր փուլը:Արփայի կիրճի վրա 1975 թվականին կառուցված մեծ կամուրջը  , հնարավորություն է տվել բնակելի շինարարությունը  կենտրոնացնել ձորի ձախափնյակում ՝ երկու միկրոշրջանների բնակիչների համար:1967 թվականին քաղաքը ձեռք է բերում հանրապետական նշանակության քաղաքի, իսկ 1970 թվականին՝ համամիութենական նշանակության առողջարանի կարգավիճակ։ 1980-ականներին քաղաքն ուներ շուրջ 10 000 բնակիչ, շուրջ 2 000 մահճակալով առողջարանների ու պանսիոնատների ցանց՝ ակտիվ հանգստի և բուժման համար նախատեսված բոլոր ենթակառուցվածքներով ու ծառայություններով։ Օբյեկտիվ պատճառներով առողջարանային քաղաքի ակտիվ կյանքը 1990-ականներից մեծ տեղատվություն ապրեց, որը սկսեց աշխուժանալ 1990-ական թվերի վերջերից։

Ջերմուկում հայտանաբերված հին ավազանի մնացորդները վկայում են, որ միջին դարերում մարդիկ օգտվել են ջերմուկներից:Հին ավազանը կարգավորվել է 19-րդ դարի երկրորդ կեսերին,երբ Ջերմուկը մտավ Երևանի նահանգի Շարուր-Դարալագյազի գավառի մեջ:</string>
    <string name="vayoc_dzor_2">Վաղնջական ժամանակաշրջան և գինեգործություն</string>
    <string name="yeghegnadzor_4">Աշխարհագրություն</string>
    <string name="yeghegnadzor_5">   Քաղաքը տարածվում է Արփա գետի ափին,գրավում է Վայքի գոգավորության արևմտյան մասը։ Հյուսիսում սամանակցում է Գլաձոր և Վերնաշեն գյուղերի հետ։ Եղեգնաձորով է անցնում Սյունիքի մարզը և Արցախի Հանրապետությունը Երևանի հետ կապող մայրուղին։

 Համայնքի ֆիզիկա-աշխարհագրական կոմպլեքսները ներկայացված են ցածրադիր և միջին բարձրության գոտիներում, որտեղ գերիշխում են կիսաանապատները և չոր տափաստանները։</string>
    <string name="jermuk_5">Ջերմուկը ունի լեռնային կլիմա: Ամառը՝ զով է, ձմեռը՝ երկարատև և ձյունառատ: Արևափայլի տևողությունը կազմում է տարեկան 2300 ժամ: Օդի օրական միջին ջերմաստիճանը Ջերմուկում կազմում է՝ գարնանը՝+0.40 C, ամռանը ՝+15.30C, աշնանը՝+4.90C, ձմռանը՝-90C: Հունվարի միջին ջերմաստիճանը -90C է,նվազագույնը՝-350C, հուլիսինը՝180C, առավելագույնը՝ 320C, տարեկան տեղումները՝ մոտ 800մմ, հարաբերական խոնավությունը՝ 45-48%, արևափայլքի տևողությունը ՝2340 ժ:</string>
    <string name="noravank">Նորավանք</string>
    <string name="shativank">Շատինվանքի եկեղեցի</string>
    <string name="trdat">Սուրբ Տրդատ եկեղեցի</string>
    <string name="smbatabert">Սմբատաբերդ</string>
    <string name="smb_patmutyun">Սմբատաբերդի պատմությունը</string>
    <string name="smb_pasht">Ամրոցը, որպես պաշտպանական ամրություն</string>
    <string name="smb_mijn">Ամրոցի միջնաբերդը</string>
    <string name="smb_1">Ամրոցի ավերակները գտնվում են Վարդենիսի լեռնաշղթայի հարավ-արևմտյան լեռնաբազուկներից մեկի գագաթային մասում` ծովի մակերևույթից մոտ 2000 մ բարձրության վրա: Բարձրաբերձ այդ լեռնաբազուկը հարավ-արևելքում եզերված է Եղեգիս գետի կիրճով, հյուսիս-արևմուտքում` Արտաբույնք գետի ձորով, և  այդ մասերում բերդը պաշտպանված է զառիթափ ու դժվարամատչելի լանջերով, իսկ հյուսիս-արևելքում այն աստիճանաբար ձուլվում է տեղանքին: Ամրոցի նման տեղադիրքը բերդապահներին հնարավորություն է ընձեռնել դիտարկելու շրջակա ձորերն ու լեռները` ժամանակին ահազանգելով մոտեցող թշնամիների մասին:</string>
    <string name="smb_2">Սմբատաբերդը Վայոց ձորի մեծ ու անառիկ ամրոցներից մեկն է և հիմնվել է վաղ միջնադարում: Կառուցված է երկարատև պաշտպանության համար, միջնադարյան բերդաշինության բոլոր կանոններով: Ընդհանուր երկարությունը մոտ մեկ կիլոմետր է:

Այն մինչև 7-րդ դարի առաջին քառորդը պատկանել է Սյունյաց գահերեց իշխաններին, այնուհետև 10-րդ դարում անցել է Բագրատունիներին, իսկ 13-րդ դարում` Օրբելյան իշխաններին և մինչև 15-րդ դարը եղել է նրանց տոհմական սեփականությունը: 1605 թ. բերդը` Եղեգիս քաղաքի հետ հիմնովին ավերվել են պարսից շահ Աբասի արշավանքների հետևանքով:</string>
    <string name="smb_3">13-15 դդ. Օրբելյանները, ամրացնելով բերդը, վերածել են հզոր պաշտպանական կառույցի: Ամրոցին այս անունը տրվել է 19-րդ դարում` մերձակա գյուղերի բնակիչների կողմից. անվանակոչման համար առիթ է հանդիսացել Եղեգիս գյուղի Օրբելյանների տոհմական գերեզմանատանը գտնվող Սմբատ իշխանի 1280 թ. տապանաքարը:  Որոշ ուսումնասիրողներ գտնում են, որ Սմբատաբերդը Ստեփանոս Օրբելյանի կողմից հիշատակված Կապույտ բերդն է:

Ամբատաբերդը հանդիսացել է Եղեգիսի միջնաբերդը` գրավելով դժվարամատչելի լեռնաբազուկի բարձրադիր գագաթամերձ մասը և ընդգրկելով ընդարձակ տարածություն: Ամրոցի հատակագիծը թելադրված է տեղանքի ռելիեֆի առանձահատկություններով:  Պարիսպները շարված են բազալտի ճեղքված և կոփածո քարերով ու կրաշաղախով, բարձրությունը տեղ-տեղ անցնում է տասը մետրից, լայնությունը` երեքից հինգ մետր է: Ունի երեք մուտք` արևելքից, հարավից և հյուսիսից, որոնք շարված են սրբատաշ քարերով:</string>
    <string name="smb_4">Հյուսիսային և արևելյան մուտքերն անցնում են թաղածածկ սրահներով, որոնց տանիքներին տեղադրված են եղել դիտանոցներ: Ամրոցն ունեցել է ընդհանուր պատով բաժանված երկու միջնաբերդեր` արևմտյան և արևելյան, որոնք կառուցված են ամենաբարձր կետերում: Արևմտյան միջնաբերդը վատ է պահպանվել: Այստեղ նկատելի են ուղղանկյուն-քառանկյունի կառույցների հիմնապատերը: Արևելյան միջնաբերդը անհամեմատ լավ է պահպանվել: Այն կիսաբոլոր ձգվում է ամրոցի ամենաբարձր` ժայռեղեն գագաթին, որոշ հատվածներում մինչև երեք մետր բարձրությամբ: Միակ մուտքը արևմտյան կողմից է: Ներքուստ առկա են սենյակներ, որոնք միմյանց հետ հաղորդակցվում են միջանցքներով: Ամրոցի ներսում` պարիսպներին կից, պահպանվել են ճեղքված բազալտե քարերով կառուցված բազմաթիվ շինությունների փլատակներ, զորանոցներ:</string>
</resources>