<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jermuk">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jermuk"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="150dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yeghegnadzor_1"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/jrm"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yeghegnadzor_2"
                android:textStyle="bold"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="15dp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jermuk_3"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yeghegnadzor_4"
                android:textStyle="bold"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jermuk_5"
                android:layout_marginTop="15dp"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>