<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Main2Activity4">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:src="@mipmap/jermuk1_foreground"></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/noravank"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="250dp"
        android:textStyle="bold">

    </TextView>

    <ImageView
    android:layout_marginTop="260dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/caxac_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/trdat"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="200dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_marginTop="520dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/jermuk_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/jermuk"
        android:layout_marginTop="800dp"
        android:layout_marginLeft="200dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_marginTop="810dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/shativank_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/shativank"
        android:layout_marginTop="1125dp"
        android:layout_marginLeft="200dp"
        android:textStyle="bold"/>

</RelativeLayout>
</ScrollView>